# zi-playground

./: .env.development  .env.example  .env.production  .eslintignore  .gitignore  HOW_TO_RUN.md  README.md  index.html  jest.config.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
Iphone keypass animation.lottie/: manifest.json
Iphone keypass animation.lottie/animations/: e5e276f9-b41b-465d-bc83-87c039b7672b.json
SECURITY AUDITS/: SECURITY-AUDIT-ACTION-PLAN.md
__tests__/: example.test.ts  page.test.tsx
docs/: IMPLEMENTATION.md  README.md  README.quantum.md  troubleshooting.md
docs/NewDevsREADTHIS.MD/: README.md
docs/ProtocolUpdates/: P23Issues.md  Protocol23.md  Updated23Required.md
docs/api/: database-schema.md  edge-functions.md
docs/contracts/: GAME_REWARD_CONTRACT_INFO.md  Game_Reward_Contract_Deployment.docx  INTEGRATION_COMMANDS.md
docs/contracts/code/zi_lp_staking/: Cargo.toml  deploy.sh  test.sh
docs/contracts/code/zi_lp_staking/src/: errors.rs  events.rs  lib.rs  storage.rs
docs/development/: AUDIT_REPORT_2026_01_14.md  AUDIT_RESULTS_FEB_28_2026.md  Astriodmining.md  COMPREHENSIVE_AUDIT_MAR_01_2026.md  COMPREHENSIVE_FIXES_LOG.md  CRITICAL_ISSUES_REPORT_MAR_01_2026.md  CRITICAL_SECURITY_REPORT_FEB_18_2026.md  Critical-Issue-Resolved.md  Current-Issues.md  DEV_REPORT_MAR_06_2026.md  DEV_REPORT_MAR_20_2026.md  DEV_REPORT_MAY_13_2026.md  Feb14-Milestone-Assessment.md  (+17 more)
playwright-report/: index.html
src/: app.html  guestbook.html
supabase/: .env.development  config.toml
(+120 files in other folders)
