[package]
name = "zi-lp-staking"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]
# Enable on testnet builds: 12-hour lock represents 1 year for demo/testing purposes
testnet-time = []

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
